[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Art/Sprites/player.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Common/Health.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Common/Movement.gd" type="Script" id=5]
[ext_resource path="res://Scenes/PlayerAction/PlayerAction.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Actions/Bullet.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/PlayerAction/Secondaries/SlowShot.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Particles/DizzyEffect.tscn" type="PackedScene" id=9]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 62.7223, 62.0574 )

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 0.140625, 0, 1, 0.945098, 1, 0.0156863, 0.67451 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
scale = Vector2( 0.5, 0.5 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )
hitMaterial = SubResource( 1 )

[node name="ActionSpawnPoint" type="Node2D" parent="."]
position = Vector2( 64, 64 )

[node name="Sprite" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 65.3521, 64.7525 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 64, 64 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 64, 64 )
enabled = true
cast_to = Vector2( 0, 100 )
collision_mask = 4

[node name="ZAction" parent="." instance=ExtResource( 6 )]
scene_file = ExtResource( 7 )
time = 0.4

[node name="XAction" parent="." instance=ExtResource( 8 )]

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.001
one_shot = true

[node name="Health" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Movement" type="Node" parent="."]
script = ExtResource( 5 )
speed = 350.0

[node name="DamageTextSpawn" type="Node2D" parent="."]
position = Vector2( 64.1529, 59.3564 )

[node name="DeathParticle" type="CPUParticles2D" parent="."]
visible = false
position = Vector2( 65.1765, 62.2669 )
gravity = Vector2( 0, -200 )
angular_velocity = 100.0
angle = 30.0
angle_random = 1.0
scale_amount = 50.0
scale_amount_random = 1.0
color_ramp = SubResource( 3 )

[node name="DizzyEffect" parent="." instance=ExtResource( 9 )]

[node name="FlinchTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="HurtTimer" to="." method="_on_HurtTimer_timeout"]
[connection signal="IsDeadEvent" from="Health" to="." method="_on_Health_IsDeadEvent"]
[connection signal="UpdateHealthEvent" from="Health" to="." method="_on_Health_UpdateHealthEvent"]
